Make plugin JDK 8 compatible